--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-notion-churnotion",
   "description": "Gatsby plugin that can connect with One Notion Database RECURSIVELY using official API",
-  "version": "1.0.27",
+  "version": "1.0.43",
   "skipLibCheck": true,
   "license": "0BSD",
   "main": "./dist/gatsby-node.js",
@@ -36,10 +36,10 @@
     "@notionhq/client": "^2.2.15",
     "@types/node": "^22.10.2",
     "axios": "^1.7.9",
+    "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-json": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
-    "gatsby-plugin-sharp": "^5.14.0",
     "node-fetch": "^3.3.2",
     "notion-to-md": "^3.1.1",
     "typescript": "^5.7.2"
@@ -51,5 +51,6 @@
     "gatsby": "^5.14.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
