--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-notion-churnotion",
   "description": "Gatsby plugin that can connect with One Notion Database RECURSIVELY using official API",
-  "version": "1.1.23",
+  "version": "1.1.28",
   "skipLibCheck": true,
   "license": "0BSD",
   "main": "./dist/gatsby-node.js",
@@ -51,6 +51,7 @@
     "natural": "^8.0.1",
     "notion-to-md": "^3.1.1",
     "notion-types": "^7.1.5",
+    "p-limit": "^6.2.0",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
